--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,14 +2,36 @@ backend:
   name: github
   repo: keramei/test-gatsby-site
 
+publish_mode: editorial_workflow
 media_folder: static/assets
 
 collections:
-  - name: blog
-    label: Blog
-    folder: blog
-    create: true
-    fields:
-      - { name: path, label: Path }
-      - { name: date, label: Date, widget: date }
-      - { name: title, label: Title }
+- name: illustration
+  label: Illustration
+  folder: works
+  create: true
+  slug: "{{slug}}"
+  filter: { field: type, value: illustration }
+  fields: &works_fields
+  - { name: title, label: Title, widget: string }
+  - { name: type, label: Type, widget: select, options: [ illustration, narrative, study ]}
+  - name: images
+    label: Images
+    widget: list
+    field:
+    - { name: url, label: URL, widget: string }
+  - { name: body, label: Body, widget: markdown }
+- name: narrative
+  label: Narrative
+  folder: works
+  create: true
+  slug: "{{slug}}"
+  filter: { field: type, value: narrative }
+  fields: *works_fields
+- name: study
+  label: Studies
+  folder: works
+  create: true
+  slug: "{{slug}}"
+  filter: { field: type, value: study }
+  fields: *works_fields
