--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
-    "gatsby-plugin-netlify-cms": "^1.0.6"
+    "gatsby-plugin-netlify-cms": "^1.0.6",
+    "gatsby-source-filesystem": "^1.5.18",
+    "gatsby-transformer-remark": "^1.7.31"
   }
 }
