--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-glamor": "^1.6.11",
     "gatsby-plugin-netlify-cms": "^1.0.6",
+    "gatsby-plugin-typography": "^1.7.13",
     "gatsby-source-filesystem": "^1.5.18",
-    "gatsby-transformer-remark": "^1.7.31"
+    "gatsby-transformer-remark": "^1.7.31",
+    "glamorous": "^4.11.4",
+    "typography-theme-moraga": "^0.15.10"
   }
 }
