--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^1.9.158",
-    "gatsby-link": "^1.6.34",
-    "gatsby-plugin-glamor": "^1.6.11",
-    "gatsby-plugin-netlify-cms": "^1.0.6",
+    "gatsby": "^1.9.197",
+    "gatsby-link": "^1.6.37",
+    "gatsby-plugin-glamor": "^1.6.12",
+    "netlify-cms": "1.1.0",
+    "gatsby-plugin-netlify-cms": "^1.0.7",
     "gatsby-plugin-react-next": "^1.0.9",
-    "gatsby-plugin-typography": "^1.7.13",
-    "gatsby-source-filesystem": "^1.5.18",
-    "gatsby-transformer-remark": "^1.7.31",
+    "gatsby-plugin-typography": "^1.7.14",
+    "gatsby-source-filesystem": "^1.5.19",
+    "gatsby-transformer-remark": "^1.7.32",
     "glamorous": "^4.11.4",
+    "immutable": "^3.8.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "typography-theme-moraga": "^0.15.10"
   }
