--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -34,7 +34,7 @@ collections:
   files:
     - label: About Page
       name: about
-      file: content/about.yml
+      file: content/about.md
       fields:
         - {label: Title, name: title, widget: string}
         - {label: Body, name: body, widget: markdown}
