--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Gatsby hello world starter",
+  "name": "test-gatsby-site",
+  "description": "Test Gatsby Site",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -11,7 +11,6 @@
     "gatsby": "^1.9.197",
     "gatsby-link": "^1.6.37",
     "gatsby-plugin-glamor": "^1.6.12",
-    "netlify-cms": "1.1.0",
     "gatsby-plugin-netlify-cms": "^1.0.7",
     "gatsby-plugin-react-next": "^1.0.9",
     "gatsby-plugin-typography": "^1.7.14",
@@ -19,6 +18,7 @@
     "gatsby-transformer-remark": "^1.7.32",
     "glamorous": "^4.11.4",
     "immutable": "^3.8.2",
+    "netlify-cms": "1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
