--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "react-media": "^1.8.0",
+    "relay-compiler": "1.4.1",
     "typography-theme-moraga": "^0.15.10"
   }
 }
