--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gatsby": "^1.9.197",
     "gatsby-link": "^1.6.37",
+    "gatsby-module-loader": "^1.0.10",
     "gatsby-plugin-glamor": "^1.6.12",
     "gatsby-plugin-netlify-cms": "^1.0.7",
     "gatsby-plugin-react-next": "^1.0.9",
