--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
-    "react-media": "^1.8.0",
+    "react-responsive": "^4.0.4",
     "relay-compiler": "1.4.1",
     "typography-theme-moraga": "^0.15.10"
   }
