--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ collections:
   create: true
   slug: "{{slug}}"
   fields: &works_fields
-  - { name: cover, label: "Cover Image", widget: string }
+  - { name: cover, label: "Cover Image", widget: image }
   - { name: title, label: Title, widget: string }
   - { name: body, label: Body, widget: markdown }
 - name: narrative
