--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,7 @@ backend:
 
 publish_mode: editorial_workflow
 media_folder: static/assets
+public_folder: assets/
 
 collections:
 - name: illustration
