--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,7 @@ collections:
   fields: &works_fields
   - { name: cover, label: "Cover Image", widget: image }
   - { name: title, label: Title, widget: string }
+  - { name: order, label: "Sort Order", widget: number, valueType: int, default: 999}
   - { name: body, label: Body, widget: markdown }
 - name: sequential
   label: Sequential
