--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^1.9.197",
+    "gatsby": "^1.9.207",
     "gatsby-link": "^1.6.37",
     "gatsby-module-loader": "^1.0.10",
     "gatsby-plugin-glamor": "^1.6.12",
@@ -21,7 +21,7 @@
     "immutable": "^3.8.2",
     "material-ui": "^1.0.0-beta.34",
     "material-ui-icons": "^1.0.0-beta.17",
-    "netlify-cms": "1.1.0",
+    "netlify-cms": "^1.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
